# htipc

./: .gitignore  Cargo.toml  Document.md  LICENSE  README copy.md  README.md  example.qmd
R/: DESCRIPTION  NAMESPACE
R/R/: extendr-wrappers.R
R/src/: Makevars  Makevars.win  entrypoint.c  htipcR-win.def
R/src/rust/: Cargo.toml
R/src/rust/src/: lib.rs
core/: Cargo.toml
core/src/: core.rs  lib.rs  main.rs
core/src/core/: memorymappedfile.rs  namedpipe.rs
cs/: App.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  SimpleGUI.csproj
cs/model/: ActionCreator.cs  Ipc.cs  MainModel.cs  ResourceEx.cs  State.cs
cs/resource/: app.js  index.html
pyo3/: Cargo.toml  pyproject.toml
pyo3/python/sandboxPyo/: __init__.py
pyo3/src/: lib.rs
rust/: Cargo.toml
rust/argsproc/: Cargo.toml
rust/argsproc/src/: lib.rs
rust/clu/: Cargo.toml
rust/clu/src/: main.rs
rust/core/: Cargo.toml
rust/core/src/: core.rs  lib.rs
rust/core/src/core/: memorymappedfile.rs  namedpipe.rs
src/: ipc.rs  main.rs
test/: server.csx
tests/: example.qmd  server.csx  test.csx  test.py
