[package]
name = "htipc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# [lib]
# crate-type = ["rlib", "cdylib", "staticlib"]

[features]
default = []

[dependencies]
clap = { version = "4.4.10", features = ["derive",] }
anyhow = "*"
colored = "*"

tokio = { version = "*", features = ["rt", "net", "io-util"] }
windows-sys = "*"
