[package]
name = "htipcPyo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "htipcPyo"
crate-type = ["cdylib"]

[dependencies]
anyhow = "*"
colored = "*"
serde = { version = "*", features = ["derive"] }
serde_json = "*"
indoc = "*"

pyo3 = { version = "*", features = ["anyhow"] }
numpy = "*"
serde-pyobject = "*"

htipc = { path = "../rust/core", features = ["python"] }
# htipc = { git = "https://github.com/haitusense/htipc/", branch = "20240114", features = ["python"] }