[package]
name = "argsproc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
anyhow = { workspace = true }
thiserror = { workspace = true }

syn = { version = "*", features = ["full", "extra-traits"] }
quote = "*"
proc-macro2 = "*"