[package]
name = "htipc"
version = "0.1.0"
authors = ["haitusense Co.Ltd."]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = [ "rlib", "cdylib" ]

[features]
default = ["pyo3",]
r-lang = ["extendr-api"]
python = ["pyo3", "serde-pyobject"]

[dependencies]
argsproc = { workspace = true }

anyhow = { workspace = true }
thiserror = { workspace = true }
colored = "*"

serde = { version = "*", features = ["derive"] }
serde_json = "*"

regex = "1.10.2"
wildmatch = "2.3.0"

clap = { version = "4.4.10", features = ["derive",] }
crossterm = "*"
ctrlc = "3.4.2"

extendr-api = { optional = true, version = "*" }
pyo3 = { optional = true, version = "*", features = ["auto-initialize",] }
serde-pyobject = { optional = true, version ="*" }

# namedpipe
tokio = { version = "*", features = ["rt", "net", "io-util"] }
named_pipe = "0.4.1"
windows-sys = "*"

# mmf
# winapi = { version = "0.3.9", features = ["winbase"] }
# kernel32-sys = "0.2.2"
winapi = { version = "*", features = [ "memoryapi", "winnt", "errhandlingapi", "namedpipeapi", "winbase", ] }

